<resources>
    <string name="app_name">MyPosyandu</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="profil">Profil</string>
    <string name="keluar">Keluar</string>

    <string name="menu_data_bayi">Data Bayi</string>
    <string name="menu_detail_bayi">Detail Data Bayi</string>
    <string name="menu_jadwal">Jadwal Imunisasi</string>
    <string name="menu_artikel">Artikel</string>
    <string name="tambah_bayi">Tambah Data Bayi</string>

    <string name="home_second">Home Second</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="action_settings">Settings</string>

    <string name="menu_data_ibu">Data Ibu</string>
    <string name="menu_imunisasi">Jadwal Imunisasi</string>
    <string name="menu_artikel_admin">Artikel</string>
    <string name="title_activity_main4">Main4Activity</string>

    <string name="menu_home">Data Ibu dan Bayi</string>
    <string name="menu_gallery">Jadwal Imunisasi</string>
    <string name="menu_slideshow">Artikel</string>
</resources>
