<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_bayi">

    <fragment
        android:id="@+id/nav_bayi"
        android:name="com.example.myposyandu.fragment_ibu.DataBayiFragment"
        android:label="@string/menu_data_bayi"
        tools:layout="@layout/fragment_data_bayi">

        <action
            android:id="@+id/action_nav_bayi_to_nav_detail_bayi"
            app:destination="@id/nav_detail_bayi" />
    </fragment>
    <fragment
        android:id="@+id/nav_detail_bayi"
        android:name="com.example.myposyandu.fragment_ibu.DetailBayiFragment"
        android:label="@string/menu_detail_bayi"
        tools:layout="@layout/fragment_detail_bayi">

    </fragment>

    <fragment
        android:id="@+id/nav_jadwal"
        android:name="com.example.myposyandu.fragment_ibu.JadwalFragment"
        android:label="@string/menu_jadwal"
        tools:layout="@layout/fragment_jadwal">
    </fragment>

    <fragment
        android:id="@+id/nav_artikel"
        android:name="com.example.myposyandu.fragment_ibu.ArtikelFragment"
        android:label="@string/menu_artikel"
        tools:layout="@layout/fragment_artikel" />
    <fragment
        android:id="@+id/nav_tambahBayi"
        android:name="com.example.myposyandu.fragment_ibu.TambahBayiFragment"
        android:label="@string/tambah_bayi"
        tools:layout="@layout/fragment_tambah_bayi" />
</navigation>